Add /scenes command suite for scene and keyframe workflows (#4)